--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,11 @@ dependencies:
   flutter_bloc: ^8.1.3
   google_fonts: ^5.1.0
   font_awesome_flutter: ^10.4.0
+  intl_phone_field: ^3.2.0
+  image_picker: ^1.0.0
+  file_picker: ^5.3.2
+  permission_handler: ^10.4.1
+  flutter_multi_select_items: ^0.4.2
 
 dev_dependencies:
   flutter_test:
