--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    
     <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <!-- These permissions for Android 9 (API level 28) OR Lower To access all media files  -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <!-- for higher Android 10 and Up -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+
+    <!-- for higher Android 10 and Up accessing all files in local device, Permission.manageExternalStorage.reqest() -->
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+
     
 
     <application
