--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   file_picker: ^5.3.2
   permission_handler: ^10.4.1
   flutter_multi_select_items: ^0.4.2
+  dio: ^5.2.1+1
 
 dev_dependencies:
   flutter_test:
@@ -36,16 +37,19 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
-    - assets/icons/
+    - assets/images/icons/
+    - assets/images/large_images/
     - assets/files/
 
+flutter_assets:
+  assets_path: assets/images
+  output_path: lib/controller/utils
+  filename: app_images.dart
+  field_prefix:
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
