--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,17 +14,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  carousel_slider: ^4.2.1
-  flutter_bloc: ^8.1.3
-  google_fonts: ^5.1.0
-  font_awesome_flutter: ^10.4.0
-  intl_phone_field: ^3.2.0
-  image_picker: ^1.0.0
-  file_picker: ^5.3.2
-  permission_handler: ^10.4.1
-  flutter_multi_select_items: ^0.4.2
-  dio: ^5.2.1+1
+  cupertino_icons: 
+  carousel_slider:
+  flutter_bloc: 
+  google_fonts: 
+  font_awesome_flutter: 
+  intl_phone_field: 
+  image_picker: 
+  file_picker: 
+  permission_handler: 
+  flutter_multi_select_items: 
+  dio: 
 
 dev_dependencies:
   flutter_test:
