--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   path_provider: ^2.0.15
   path: ^1.8.3
   shared_preferences: ^2.2.0
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_test:
