--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   path: ^1.8.3
   shared_preferences: ^2.2.0
   url_launcher: ^6.1.12
+  share_plus: ^7.1.0
 
 dev_dependencies:
   flutter_test:
